crates/macro/tests/html-node-fail.stderr
error: unsupported type
  --> $DIR/html-node-fail.rs:14:28
   |
14 | test_html! { |t15| <span>{ 1111111111111111111111111111111111111111111111111111111111111111111111111111 }</span> }
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unsupported type
  --> $DIR/html-node-fail.rs:13:28
   |
13 | test_html! { |t14| <span>{ b"str" }</span> }
   |                            ^^^^^^

error: unsupported type
  --> $DIR/html-node-fail.rs:12:28
   |
12 | test_html! { |t13| <span>{ b'a' }</span> }
   |                            ^^^^

error: unsupported type
  --> $DIR/html-node-fail.rs:11:20
   |
11 | test_html! { |t12| 1111111111111111111111111111111111111111111111111111111111111111111111111111 }
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unsupported type
  --> $DIR/html-node-fail.rs:10:20
   |
10 | test_html! { |t11| b"str" }
   |                    ^^^^^^

error: unsupported type
 --> $DIR/html-node-fail.rs:9:20
  |
9 | test_html! { |t10| b'a' }
  |                    ^^^^

error: unexpected token
 --> $DIR/html-node-fail.rs:4:35
  |
4 | test_html! { |t2| <span>{ "valid" "invalid" }</span> }
  |                                   ^^^^^^^^^

error: only one root html element allowed
 --> $DIR/html-node-fail.rs:3:27
  |
3 | test_html! { |t1| "valid" "invalid" }
  |                           ^^^^^^^^^

error[E0425]: cannot find value `invalid` in this scope
 --> $DIR/html-node-fail.rs:6:19
  |
6 | test_html! { |t4| invalid }
  |                   ^^^^^^^ not found in this scope

error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> $DIR/html-node-fail.rs:20:9
   |
20 |         not_node()
   |         ^^^^^^^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: required because of the requirements on the impl of `std::string::ToString` for `()`
   = note: required because of the requirements on the impl of `std::convert::From<()>` for `yew_shared::virtual_dom::vnode::VNode<_>`
   = note: required by `std::convert::From::from`

error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> $DIR/html-node-fail.rs:5:19
  |
5 | test_html! { |t3| () }
  |                   ^^ `()` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: required because of the requirements on the impl of `std::string::ToString` for `()`
  = note: required because of the requirements on the impl of `std::convert::From<()>` for `yew_shared::virtual_dom::vnode::VNode<_>`
  = note: required by `std::convert::From::from`

Some errors occurred: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
